--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
 
     <color name="blue_dark_1">#010729</color>
-    <color name="blue_dark_2">#020F53</color>
-    <color name="blue_dark_3">#091A7A</color>
+    <color name="blue_dark_2">#020A37</color>
+    <color name="blue_dark_3">#05104E</color>
 
     <color name="black">#FF000000</color>
     <color name="gray_dark">#353639</color>
