--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -28,10 +28,11 @@
         android:id="@+id/text_app_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/astrospace"
         android:gravity="center"
         android:text="@string/app_name"
         android:textAllCaps="true"
-        android:textSize="50sp"
+        android:textSize="55sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/guideline_left"
