--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -4,13 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="solvro.spaceflights.ToolbarFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_article_top"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_article_top"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="55dp" />
+
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/guideline_article_top">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,32 +38,64 @@
             android:paddingHorizontal="25dp">
 
             <TextView
-                android:id="@+id/text_article_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:text="@string/placeholder"
-                android:textSize="16sp"
-                android:layout_marginVertical="5dp"/>
-
-            <TextView
                 android:id="@+id/text_article_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
                 android:gravity="center"
                 android:text="@string/placeholder"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:layout_marginVertical="20dp"/>
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="30dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/illustration_image"
+                android:cropToPadding="false"
+                android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/text_article_summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="10dp"
                 android:gravity="center_vertical"
+                android:justificationMode="inter_word"
                 android:text="@string/placeholder"
-                android:textSize="19sp"
-                android:textStyle="bold" />
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/text_article_news_site"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="5dp"
+                android:gravity="center_vertical|end"
+                android:text="@string/placeholder"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/text_article_published"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="5dp"
+                android:gravity="center_vertical|end"
+                android:text="@string/placeholder"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/text_article_updated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="5dp"
+                android:gravity="center_vertical|end"
+                android:text="@string/placeholder"
+                android:textSize="16sp" />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
