--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -6,7 +6,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="solvro.spaceflights.ToolbarFragment"
+        android:name="solvro.spaceflights.fragments.ToolbarFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline_article_top"
@@ -73,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
+                android:autoLink="web"
                 android:gravity="center_vertical|end"
                 android:text="@string/placeholder"
                 android:textSize="16sp"
@@ -95,7 +96,6 @@
                 android:gravity="center_vertical|end"
                 android:text="@string/placeholder"
                 android:textSize="16sp" />
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
