--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -6,12 +6,12 @@
     xmlns:shimmer="http://schemas.android.com/tools">
 
     <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/mShimmerViewContainer"
+        android:id="@+id/shimmer_all"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
-        shimmer:duration="800">
+        shimmer:duration="1400">
 
         <LinearLayout
             android:layout_width="match_parent"
