--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:shimmer="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
+        android:id="@+id/toolbar"
         android:name="solvro.spaceflights.fragments.ToolbarFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -21,81 +24,114 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="55dp" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        shimmer:duration="1400">
+
+        <include layout="@layout/placeholder_article" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <ScrollView
         android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="invisible"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="15dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_article_top">
+        app:layout_constraintTop_toTopOf="@+id/guideline_article_top"
+        android:clipToPadding="false">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_article"
+            style="@style/Base.CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="25dp">
+            android:backgroundTint="?attr/colorSecondaryVariant"
+            android:visibility="invisible"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.473"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.021"
+            card_view:cardCornerRadius="13dp">
 
-            <TextView
-                android:id="@+id/text_article_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="20dp"
-                android:gravity="center"
-                android:text="@string/placeholder"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+                android:orientation="vertical"
+                android:paddingHorizontal="25dp"
+                android:paddingVertical="35dp">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="30dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/illustration_image"
-                android:cropToPadding="false"
-                android:scaleType="centerInside" />
+                <TextView
+                    android:id="@+id/text_article_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/placeholder"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/text_article_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginVertical="10dp"
-                android:gravity="center_vertical"
-                android:justificationMode="inter_word"
-                android:text="@string/placeholder"
-                android:textSize="19sp" />
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="35dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/illustration_image"
+                    android:cropToPadding="false"
+                    android:scaleType="centerInside" />
 
-            <TextView
-                android:id="@+id/text_article_news_site"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:autoLink="web"
-                android:gravity="center_vertical|end"
-                android:text="@string/placeholder"
-                android:textSize="16sp"
-                android:textStyle="italic" />
+                <TextView
+                    android:id="@+id/text_article_summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="20dp"
+                    android:gravity="center_vertical"
+                    android:justificationMode="inter_word"
+                    android:text="@string/placeholder"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/text_article_published"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:gravity="center_vertical|end"
-                android:text="@string/placeholder"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/text_article_news_site"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:autoLink="web"
+                    android:gravity="center_vertical|end"
+                    android:text="@string/placeholder"
+                    android:textSize="16sp"
+                    android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/text_article_updated"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:gravity="center_vertical|end"
-                android:text="@string/placeholder"
-                android:textSize="16sp" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/text_article_published"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:gravity="center_vertical|end"
+                    android:text="@string/placeholder"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/text_article_updated"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:gravity="center_vertical|end"
+                    android:text="@string/placeholder"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
