--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="7dp"
-        android:backgroundTint="@color/blue_dark_2"
+        android:backgroundTint="?attr/colorSecondaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
@@ -27,7 +26,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp">
+            android:paddingVertical="20dp">
 
             <TextView
                 android:id="@+id/text_date"
@@ -41,7 +40,7 @@
                 android:id="@+id/text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="20dp"
                 android:text="@string/placeholder"
                 android:textSize="19sp"
                 android:textStyle="bold" />
@@ -63,11 +62,13 @@
                     android:id="@+id/image_isfavourite"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxHeight="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="4dp"
                     android:layout_weight="0.2"
                     android:adjustViewBounds="true"
                     android:cropToPadding="false"
-                    app:srcCompat="@drawable/star1" />
+                    android:maxHeight="40dp"
+                    android:contentDescription="@string/star_description" />
 
             </LinearLayout>
 
