--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,19 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.SpaceFlights" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_dark_2</item>
+        <item name="colorPrimary">@color/blue_dark_4</item>
         <item name="colorPrimaryVariant">@color/blue_dark_3</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+
         <item name="colorSecondary">@color/gray_light</item>
-        <item name="colorSecondaryVariant">@color/blue_dark_2</item>
-        <item name="colorOnSecondary">@color/blue_dark_1</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_dark_1</item>
-        <!-- Customize your theme here. -->
-        <item name="android:colorBackground">@color/blue_dark_1</item>
+        <item name="colorSecondaryVariant">@color/blue_dark_4</item>
+        <item name="colorOnSecondary">@color/blue_dark_5</item>
+
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_dark_5</item>
+        <item name="android:colorBackground">@color/blue_dark_5</item>
+
         <item name="android:forceDarkAllowed">false</item>
+
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="AppTabLayout" parent="Widget.Design.TabLayout">
@@ -21,7 +23,7 @@
         <item name="tabIndicatorHeight">4dp</item>
         <item name="tabPaddingStart">6dp</item>
         <item name="tabPaddingEnd">6dp</item>
-        <item name="tabBackground">@color/blue_dark_2</item>
+        <item name="tabBackground">@color/blue_dark_5</item>
         <item name="android:forceDarkAllowed">false</item>
     </style>
 </resources>
