--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
-    <color name="blue_dark_1">#020428</color>
-    <color name="blue_dark_2">#020A37</color>
-    <color name="blue_dark_3">#05104E</color>
+    <color name="blue_dark_3">#292E4E</color>
+    <color name="blue_dark_4">#1D2032</color>
+    <color name="blue_dark_5">#11121B</color>
 
     <color name="black">#FF000000</color>
     <color name="gray_dark">#353639</color>
