--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,31 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.SpaceFlights" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_dark_2</item>
+        <item name="colorPrimary">@color/blue_dark_4</item>
         <item name="colorPrimaryVariant">@color/blue_dark_3</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
-        <!-- Customize your theme here. -->
+
+        <item name="colorSecondary">@color/blue_dark_3</item>
+        <item name="colorSecondaryVariant">@color/gray_light</item>
+        <item name="colorOnSecondary">@color/gray_light</item>
+
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_dark_5</item>
         <item name="android:colorBackground">@color/gray_light</item>
+
+        <item name="android:textColorPrimary">@color/gray_light</item>
+        <item name="android:textColorSecondary">@color/gray_light</item>
+        <item name="android:textColorTertiary">@color/blue_dark_4</item>
+
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="fontFamily">@font/rubik</item>
+    </style>
+
+    <style name="AppTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/gray_light</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabPaddingStart">6dp</item>
+        <item name="tabPaddingEnd">6dp</item>
+        <item name="tabBackground">@color/blue_dark_5</item>
+        <item name="android:forceDarkAllowed">false</item>
     </style>
 </resources>
