--- a/app/src/main/res/drawable/info_icon.xml
+++ b/app/src/main/res/drawable/info_icon.xml
@@ -3,7 +3,7 @@
     android:height="40dp"
     android:viewportWidth="108"
     android:viewportHeight="108"
-    android:tint="#FFFFFF">
+    android:tint="@color/gray_light">
   <group android:scaleX="3.132"
       android:scaleY="3.132"
       android:translateX="16.416"
