--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,7 +15,7 @@
     <ImageView
         android:id="@+id/image_logo"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="150dp"
         android:contentDescription="@string/logo_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -23,7 +23,7 @@
         app:layout_constraintRight_toRightOf="@id/guideline_right"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.269"
-        app:srcCompat="@mipmap/ic_launcher_foreground" />
+        app:srcCompat="@drawable/rocket" />
 
     <TextView
         android:id="@+id/text_app_name"
