--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,29 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.SpaceFlights" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/blue_dark_4</item>
-        <item name="colorPrimaryVariant">@color/blue_dark_3</item>
+        <item name="colorPrimary">@color/blue_2</item>
+        <item name="colorPrimaryVariant">@color/blue_1</item>
         <item name="colorOnPrimary">@color/white</item>
 
         <item name="colorSecondary">@color/gray_light</item>
-        <item name="colorSecondaryVariant">@color/blue_dark_4</item>
-        <item name="colorOnSecondary">@color/blue_dark_5</item>
+        <item name="colorSecondaryVariant">@color/blue_2</item>
+        <item name="colorOnSecondary">@color/blue_3</item>
 
-        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_dark_5</item>
-        <item name="android:colorBackground">@color/blue_dark_5</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_3</item>
+        <item name="android:colorBackground">@color/blue_3</item>
 
         <item name="android:forceDarkAllowed">false</item>
+
+        <item name="android:textColorPrimary">@color/gray_light</item>
 
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="fontFamily">@font/rubik</item>
     </style>
 
-    <style name="AppTabLayout" parent="Widget.Design.TabLayout">
-        <item name="tabIndicatorColor">@color/gray_light</item>
-        <item name="tabIndicatorHeight">4dp</item>
-        <item name="tabPaddingStart">6dp</item>
-        <item name="tabPaddingEnd">6dp</item>
-        <item name="tabBackground">@color/blue_dark_5</item>
-        <item name="android:forceDarkAllowed">false</item>
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@color/gray_light</item>
+        <item name="android:background">@color/blue_2</item>
+        <item name="buttonBarPositiveButtonStyle">@style/ButtonStyleCustom</item>
+    </style>
+
+    <style name="ButtonStyleCustom" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/gray_light</item>
     </style>
 </resources>
